@@ -1,3 +1,8 @@
+2009-07-09  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/gadgets.h: Repair incomplete initialization specs for default
+	object properties.
+
 2009-07-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/term.c: The code was disabling all mousing and mouse events
